--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-anchorify-text",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "React component which render text with anchored url(s)",
   "main": "components/AnchorifyText.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "react",
     "react-component",
     "url",
-    "abchor",
+    "anchor",
     "link"
   ],
   "author": "Takeharu.Oshida",
@@ -28,34 +28,43 @@
   },
   "homepage": "https://github.com/georgeosddev/react-anchorify-text",
   "devDependencies": {
-    "babel-eslint": "^3.1.9",
-    "babelify": "^6.1.2",
-    "browser-sync": "^2.7.6",
-    "browserify": "^10.2.1",
-    "chai": "^2.3.0",
-    "eslint": "^0.21.2",
-    "eslint-plugin-react": "^2.3.0",
-    "karma": "^0.12.35",
-    "karma-browserify": "^4.2.1",
+    "babel-eslint": "^4.1.4",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-react": "^6.1.2",
+    "babelify": "^7.2.0",
+    "browser-sync": "^2.9.12",
+    "browserify": "^12.0.1",
+    "chai": "^3.4.1",
+    "eslint": "^1.9.0",
+    "eslint-plugin-react": "^3.8.0",
+    "karma": "^0.13.15",
+    "karma-browserify": "^4.4.0",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-cli": "0.0.4",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-cli": "0.1.1",
     "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.1.10",
+    "karma-mocha": "^0.2.0",
     "karma-safari-launcher": "^0.1.1",
-    "karma-spec-reporter": "0.0.19",
-    "mocha": "^2.2.5",
-    "watchify": "^3.2.1"
+    "karma-spec-reporter": "0.0.22",
+    "mocha": "^2.3.3",
+    "react-addons-test-utils": "^0.14.2",
+    "watchify": "^3.6.0"
   },
   "dependencies": {
-    "react": "^0.13.3"
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
   },
   "browserify": {
     "transform": [
       [
         "babelify",
         {
-          "compact": false
+          "compact": false,
+          "presets" : [
+            "es2015",
+            "react"
+          ]
+
         }
       ]
     ]
