--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "react-anchorify-text",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "React component which render text with anchored url(s)",
-  "main": "components/AnchorifyText.js",
+  "main": "lib/index.js",
   "scripts": {
     "browser": "browser-sync start --files example/* --server example",
     "watch:example": "watchify example/app.js -dv -o example/bundle.js",
     "start:example": "npm run watch:example & npm run browser",
     "test:local": "karma start",
-    "test": "./node_modules/.bin/karma start --browsers Firefox --single-run"
+    "test": "./node_modules/.bin/karma start --browsers Firefox --single-run",
+    "clean": "rimraf lib",
+    "build": "babel src --out-dir lib"
   },
   "repository": {
     "type": "git",
@@ -28,9 +30,11 @@
   },
   "homepage": "https://github.com/georgeosddev/react-anchorify-text",
   "devDependencies": {
+    "babel-cli": "^6.3.17",
+    "babel-core": "^6.3.26",
     "babel-eslint": "^4.1.4",
-    "babel-preset-es2015": "^6.1.2",
-    "babel-preset-react": "^6.1.2",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
     "browser-sync": "^2.9.12",
     "browserify": "^12.0.1",
@@ -48,6 +52,7 @@
     "karma-spec-reporter": "0.0.22",
     "mocha": "^2.3.3",
     "react-addons-test-utils": "^0.14.2",
+    "rimraf": "^2.5.0",
     "watchify": "^3.6.0"
   },
   "dependencies": {
@@ -60,11 +65,10 @@
         "babelify",
         {
           "compact": false,
-          "presets" : [
+          "presets": [
             "es2015",
             "react"
           ]
-
         }
       ]
     ]
