--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-anchorify-text",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "React component which render text with anchored url(s)",
   "main": "lib/index.js",
   "scripts": {
@@ -56,8 +56,10 @@
     "watchify": "^3.6.0"
   },
   "dependencies": {
+    "linkify-it": "^2.0.0",
     "react": "^0.14.2",
-    "react-dom": "^0.14.2"
+    "react-dom": "^0.14.2",
+    "tlds": "^1.145.0"
   },
   "browserify": {
     "transform": [
