--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-anchorify-text",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "React component which render text with anchored url(s)",
   "main": "lib/index.js",
   "scripts": {
@@ -32,33 +32,34 @@
   "devDependencies": {
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.26",
-    "babel-eslint": "^4.1.4",
+    "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
     "browser-sync": "^2.9.12",
-    "browserify": "^12.0.1",
-    "chai": "^3.4.1",
-    "eslint": "^1.9.0",
-    "eslint-plugin-react": "^3.8.0",
-    "karma": "^0.13.15",
-    "karma-browserify": "^4.4.0",
+    "browserify": "^14.4.0",
+    "chai": "^4.0.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.1",
+    "karma": "^1.7.0",
+    "karma-browserify": "^5.1.1",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-cli": "0.1.1",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.2.0",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-spec-reporter": "0.0.22",
-    "mocha": "^2.3.3",
-    "react-addons-test-utils": "^0.14.2",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-cli": "1.0.1",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-mocha": "^1.3.0",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-spec-reporter": "0.0.31",
+    "mocha": "^3.4.2",
+    "react-addons-test-utils": "^15.5.1",
     "rimraf": "^2.5.0",
     "watchify": "^3.6.0"
   },
   "dependencies": {
     "linkify-it": "^2.0.0",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "tlds": "^1.145.0"
   },
   "browserify": {
