--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-anchorify-text",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "React component which render text with anchored url(s)",
   "main": "lib/index.js",
   "scripts": {
@@ -32,14 +32,13 @@
   "devDependencies": {
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.26",
-    "babel-eslint": "^7.2.3",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-eslint": "^8.0.2",
     "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
+    "babelify": "^8.0.0",
     "browser-sync": "^2.9.12",
     "browserify": "^14.4.0",
     "chai": "^4.0.1",
-    "eslint": "^3.19.0",
+    "eslint": "^4.12.1",
     "eslint-plugin-react": "^7.0.1",
     "karma": "^1.7.0",
     "karma-browserify": "^5.1.1",
@@ -50,21 +49,22 @@
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.31",
-    "mocha": "^3.4.2",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
+    "mocha": "^4.0.1",
+    "react": "^16.2.0",
     "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^16.2.0",
     "rimraf": "^2.5.0",
     "watchify": "^3.6.0"
   },
   "dependencies": {
-    "prop-types": "^15.5.10",
+    "babel-preset-env": "^1.6.1",
     "linkify-it": "^2.0.0",
+    "prop-types": "^15.5.10",
     "tlds": "^1.145.0"
   },
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "browserify": {
     "transform": [
@@ -73,7 +73,7 @@
         {
           "compact": false,
           "presets": [
-            "es2015",
+            "env",
             "react"
           ]
         }
