--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-anchorify-text",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "React component which render text with anchored url(s)",
   "main": "lib/index.js",
   "scripts": {
@@ -30,41 +30,46 @@
   },
   "homepage": "https://github.com/georgeosddev/react-anchorify-text",
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.26",
-    "babel-eslint": "^8.0.2",
-    "babel-preset-react": "^6.3.13",
-    "babelify": "^8.0.0",
-    "browser-sync": "^2.9.12",
-    "browserify": "^14.4.0",
-    "chai": "^4.0.1",
-    "eslint": "^4.12.1",
-    "eslint-plugin-react": "^7.0.1",
-    "karma": "^1.7.0",
-    "karma-browserify": "^5.1.1",
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.1.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.24.7",
+    "browserify": "^16.2.2",
+    "chai": "^4.1.2",
+    "eslint": "^5.6.0",
+    "eslint-plugin-react": "^7.11.1",
+    "karma": "^3.0.0",
+    "karma-browserify": "^5.3.0",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.1.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "1.0.1",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
-    "karma-spec-reporter": "0.0.31",
-    "mocha": "^4.0.1",
-    "react": "^16.2.0",
-    "react-addons-test-utils": "^15.5.1",
-    "react-dom": "^16.2.0",
-    "rimraf": "^2.5.0",
-    "watchify": "^3.6.0"
+    "karma-spec-reporter": "0.0.32",
+    "mocha": "^5.2.0",
+    "react": "^16.5.2",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.5.2",
+    "rimraf": "^2.6.2",
+    "watchify": "^3.11.0"
   },
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
-    "linkify-it": "^2.0.0",
-    "prop-types": "^15.5.10",
-    "tlds": "^1.145.0"
+    "linkify-it": "^2.0.3",
+    "prop-types": "^15.6.2",
+    "tlds": "^1.203.1"
   },
   "peerDependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "browserify": {
     "transform": [
@@ -73,8 +78,15 @@
         {
           "compact": false,
           "presets": [
-            "env",
-            "react"
+            ["@babel/env",{ "useBuiltIns": "usage"}],
+            "@babel/react"
+          ],
+          "plugins": [
+            ["@babel/plugin-proposal-decorators", { "legacy": true }],
+            "@babel/plugin-proposal-function-sent",
+            "@babel/plugin-proposal-export-namespace-from",
+            "@babel/plugin-proposal-numeric-separator",
+            "@babel/plugin-proposal-throw-expressions"
           ]
         }
       ]
