--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
   "presets": [
-    ["@babel/env",{ "useBuiltIns": "usage"}],
+    ["@babel/env",{
+        "useBuiltIns": "usage",
+        "corejs": 3
+      }
+    ],
     "@babel/react"
   ],
   "plugins": [
