--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch:example": "watchify example/app.js -dv -o example/bundle.js",
     "start:example": "yarn run watch:example & yarn run browser",
     "test:local": "karma start",
-    "test": "./node_modules/.bin/karma start --browsers Firefox --single-run",
+    "test": "NODE_EVN=test ./node_modules/.bin/karma start --browsers Firefox --single-run && codecov",
     "clean": "rimraf lib",
     "build": "babel src --out-dir lib"
   },
@@ -40,6 +40,7 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
+    "babel-plugin-istanbul": "^5.1.4",
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.7",
     "browserify": "^16.3.0",
@@ -51,6 +52,7 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.0.0",
     "karma-cli": "2.0.0",
+    "karma-coverage": "^1.1.2",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
@@ -63,6 +65,7 @@
     "watchify": "^3.11.1"
   },
   "dependencies": {
+    "codecov": "^3.5.0",
     "core-js": "3",
     "linkify-it": "^2.2.0",
     "prop-types": "^15.7.2",
